# SonicMeterPro

./: AGENTS.md  CMakeLists.txt  README.md  metadata.json  package.json
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
src/: App.tsx
src/components/: CorrelationMeter.tsx  DigitalMeter.tsx  HistoryGraph.tsx  MonoCompatibility.tsx  VUMeter.tsx
src/hooks/: useAudioProcessor.ts
src/lib/: utils.ts
